--- a/concerts.html
+++ b/concerts.html
@@ -390,7 +390,7 @@
                 <option value="confirmed">בתהליך</option>
                 <option value="closed">נסגר</option>
             </select>
-            <select id="manualRegion" class="filter-input">
+            <select id="regionFilter" class="filter-input">
                 <option value="">כל האזורים</option>
                 <option value="צפון">צפון</option>
                 <option value="מרכז">מרכז</option>
@@ -852,14 +852,14 @@ ${userSettings.phone}`
             const cityFilter = document.getElementById('cityFilter').value;
             const typeFilter = document.getElementById('typeFilter').value;
             const statusFilter = document.getElementById('statusFilter').value;
-            const manualRegion = document.getElementById('manualRegion').value;
+            const regionFilter = document.getElementById('regionFilter').value;
 
             filteredVenues = venues.filter(venue => {
                 return (!searchFilter || venue.name.toLowerCase().includes(searchFilter)) &&
                        (!cityFilter || venue.city === cityFilter) &&
                        (!typeFilter || venue.type === typeFilter) &&
                        (!statusFilter || venue.status === statusFilter) &&
-                       (!manualRegion || venue.region === manualRegion);
+                       (!regionFilter || venue.region === regionFilter);
             });
 
             renderVenues();
@@ -955,6 +955,7 @@ let currentConversationVenueId = null;
         document.getElementById('typeFilter').addEventListener('change', applyFilters);
         document.getElementById('statusFilter').addEventListener('change', applyFilters);
         document.getElementById('manualRegion').addEventListener('change', applyFilters);
+		document.getElementById('regionFilter').addEventListener('change', applyFilters);
 
         // אתחול המערכת
         window.onload = function() {
@@ -991,7 +992,7 @@ function addManualVenue() {
     type: document.getElementById('manualType').value,
     city: document.getElementById('manualCity').value.trim(),
     notes: document.getElementById('manualNotes').value.trim(),
-    region: document.getElementById('manualRegion').value.trim(),
+    region: document.getElementById('manualRegion').value.trim() || getRegionByCity(document.getElementById('manualCity').value.trim()),
     status: 'pending',
     lastContact: null,
     nextFollowUp: null
