--- a/concerts.html
+++ b/concerts.html
@@ -148,6 +148,10 @@
             border-right: 5px solid #667eea;
             position: relative;
             overflow: hidden;
+			display: flex;
+            flex-direction: column; /* מאפשר לחלק העליון והכפתורים להיות מופרדים */
+            justify-content: space-between; /* דוחף את הכפתורים לתחתית */
+            height: 100%; /* חשוב! מאפשר לכל הכרטיס להיות באותו גובה */
         }
 
         .venue-card::before {
@@ -311,7 +315,8 @@
     <div id="conversationModal" class="modal">
       <div class="modal-content">
         <span class="close" onclick="closeConversationModal()">&times;</span>
-        <h2>🗣️ תיעוד שיחה</h2>
+        <h2>🗣️ פרטים נוספים ותיעוד שיחה</h2>
+		<div id="venueNotes" style="margin-bottom: 15px; font-size: 0.95em; background: #e8f0fe; padding: 10px; border-radius: 10px; border-right: 4px solid #4ecdc4;"></div>
         <div id="conversationHistory" style="max-height: 200px; overflow-y: auto; background: #f1f1f1; padding: 10px; border-radius: 10px; margin-bottom: 15px;"></div>
         <textarea id="conversationText" placeholder="כתוב כאן את פרטי השיחה..." style="width: 100%; height: 100px; padding: 10px; border-radius: 10px; border: 1px solid #ccc;"></textarea>
         <br><br>
@@ -737,7 +742,7 @@ if (viewMode === 'grid') {
       ${venue.type ? `<div class="info-row">🏢 ${venue.type}</div>` : ''}
       ${venue.city ? `<div class="info-row">📍 ${venue.city}</div>` : ''}
       ${venue.region ? `<div class="info-row">🗺️ ${venue.region}</div>` : ''}
-      ${venue.notes ? `<div class="info-row">📝 ${venue.notes}</div>` : ''}
+      
     </div>
     <div class="actions">
       <select class="status-select" onchange="updateStatus(${venue.id}, this.value)">
@@ -748,7 +753,7 @@ if (viewMode === 'grid') {
       </select>
       <button class="btn btn-primary" onclick="generateMessage(${venue.id})">✉️ צור הודעה</button>
       ${venue.phone ? `<button class="btn btn-secondary" onclick="callVenue('${venue.phone}')">📞 התקשר</button>` : ''}
-      <button class="btn btn-secondary" onclick="openConversation(${venue.id})">🗣️ תיעוד שיחה</button>
+      <button class="btn btn-secondary" onclick="openConversation(${venue.id})">🗣️ פרטים נוספים ותיעוד שיחה</button>
     </div>
   `;
 }
@@ -969,6 +974,11 @@ function openConversation(venueId) {
     const historyDiv = document.getElementById('conversationHistory');
     const data = JSON.parse(localStorage.getItem('venueChats') || '{}');
     const history = data[venueId] || [];
+	const venue = venues.find(v => v.id === venueId);
+    document.getElementById('venueNotes').innerHTML = venue?.notes
+      ? `<strong>📌 הערות:</strong> ${venue.notes}`
+      : '<strong>📌 הערות:</strong> אין הערות למקום זה.';
+
     
     historyDiv.innerHTML = history.map(chat => `
         <div style="margin-bottom: 8px;">
